@@ -18,6 +18,7 @@ package com.netflix.spinnaker.clouddriver.cloudfoundry.deploy.converters;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.netflix.spinnaker.clouddriver.artifacts.ArtifactCredentialsRepository;
+import com.netflix.spinnaker.clouddriver.artifacts.ArtifactDownloader;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.artifacts.ArtifactCredentialsFromString;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.CloudFoundryClient;
 import com.netflix.spinnaker.clouddriver.cloudfoundry.client.MockCloudFoundryClient;
@@ -47,6 +48,7 @@ import static org.mockito.Mockito.when;
 class DeployCloudFoundryServiceAtomicOperationConverterTest {
 
   private final CloudFoundryClient cloudFoundryClient = new MockCloudFoundryClient();
+
   {
     when(cloudFoundryClient.getOrganizations().findByName(any()))
       .thenAnswer((Answer<Optional<CloudFoundryOrganization>>) invocation -> {
@@ -70,29 +72,33 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
     }
   };
 
-  private final ArtifactCredentialsRepository artifactCredentialsRepository = new ArtifactCredentialsRepository();
-  {
-    artifactCredentialsRepository.save(new ArtifactCredentialsFromString(
-      "test",
-      List.of("a").asJava(),
-      "service_name: my-service-name\n" +
-      "service: my-service\n" +
-      "service_plan: my-service-plan\n" +
-      "tags:\n" +
-      "- tag1\n" +
-      "parameters: |\n" +
-      "  { \"foo\": \"bar\" }\n"
-    ));
-  }
+  private final ArtifactCredentialsRepository artifactCredentialsRepository = new ArtifactCredentialsRepository(
+    Collections.singletonList(
+      Collections.singletonList(new ArtifactCredentialsFromString(
+        "test",
+        List.of("test").asJava(),
+          "service_instance_name: my-service-instance-name\n" +
+          "service: my-service\n" +
+          "service_plan: my-service-plan\n" +
+          "tags:\n" +
+          "- tag1\n" +
+          "updatable: false\n" +
+          "parameters: |\n" +
+          "  { \"foo\": \"bar\" }\n"
+      ))
+    )
+  );
 
   private final AccountCredentialsRepository accountCredentialsRepository = new MapBackedAccountCredentialsRepository();
+
   {
     accountCredentialsRepository.update("test", cloudFoundryCredentials);
   }
+
   private final AccountCredentialsProvider accountCredentialsProvider =
     new DefaultAccountCredentialsProvider(accountCredentialsRepository);
   private final DeployCloudFoundryServiceAtomicOperationConverter converter =
-    new DeployCloudFoundryServiceAtomicOperationConverter(artifactCredentialsRepository);
+    new DeployCloudFoundryServiceAtomicOperationConverter(new ArtifactDownloader(artifactCredentialsRepository));
 
   @BeforeEach
   void initializeClassUnderTest() {
@@ -104,6 +110,7 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
   void convertManifestMapToServiceAttributes() {
     final Map input = HashMap.of(
       "service", "my-service",
+      "service_instance_name", "my-service-instance-name",
       "service_plan", "my-service-plan",
       "tags", List.of(
         "my-tag"
@@ -114,30 +121,118 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
     assertThat(converter.convertManifest(input)).isEqualToComparingFieldByFieldRecursively(
       new DeployCloudFoundryServiceDescription.ServiceAttributes()
         .setService("my-service")
+        .setServiceInstanceName("my-service-instance-name")
         .setServicePlan("my-service-plan")
         .setTags(Collections.singleton("my-tag"))
+        .setUpdatable(true)
         .setParameterMap(HashMap.<String, Object>of(
           "foo", "bar"
         ).toJavaMap())
-      );
+    );
+  }
+
+  @Test
+  void convertManifestMapToServiceAttributesMissingServiceThrowsException() {
+    final Map input = HashMap.of(
+      "service_instance_name", "my-service-instance-name",
+      "service_plan", "my-service-plan",
+      "tags", List.of(
+        "my-tag"
+      ).asJava(),
+      "parameters", "{\"foo\": \"bar\"}"
+    ).toJavaMap();
+
+    assertThrows(IllegalArgumentException.class, () -> converter.convertManifest(input), "Manifest is missing the service");
+  }
+
+  @Test
+  void convertManifestMapToServiceAttributesMissingServiceNameThrowsException() {
+    final Map input = HashMap.of(
+      "service_instance_name", "my-service-instance-name",
+      "service_plan", "my-service-plan",
+      "tags", List.of(
+        "my-tag"
+      ).asJava(),
+      "parameters", "{\"foo\": \"bar\"}"
+    ).toJavaMap();
+
+    assertThrows(IllegalArgumentException.class, () -> converter.convertManifest(input), "Manifest is missing the service name");
+  }
+
+  @Test
+  void convertManifestMapToServiceAttributesMissingServicePlanThrowsException() {
+    final Map input = HashMap.of(
+      "service", "my-service",
+      "service_instance_name", "my-service-instance-name",
+      "tags", List.of(
+        "my-tag"
+      ).asJava(),
+      "parameters", "{\"foo\": \"bar\"}"
+    ).toJavaMap();
+
+    assertThrows(IllegalArgumentException.class, () -> converter.convertManifest(input), "Manifest is missing the service plan");
+  }
+
+  @Test
+  void convertCupsManifestMapToUserProvidedServiceAttributes() {
+    final Map input = HashMap.of(
+      "service_instance_name", "my-service-instance-name",
+      "syslog_drain_url", "test-syslog-drain-url",
+      "updatable", false,
+      "route_service_url", "test-route-service-url",
+      "tags", List.of(
+        "my-tag"
+      ).asJava(),
+      "credentials_map", "{\"foo\": \"bar\"}"
+    ).toJavaMap();
+
+    assertThat(converter.convertUserProvidedServiceManifest(input)).isEqualToComparingFieldByFieldRecursively(
+      new DeployCloudFoundryServiceDescription.UserProvidedServiceAttributes()
+        .setServiceInstanceName("my-service-instance-name")
+        .setSyslogDrainUrl("test-syslog-drain-url")
+        .setRouteServiceUrl("test-route-service-url")
+        .setTags(Collections.singleton("my-tag"))
+        .setUpdatable(false)
+        .setCredentials(HashMap.<String, Object>of(
+          "foo", "bar"
+        ).toJavaMap())
+    );
+  }
+
+  @Test
+  void convertCupsManifestMapToUserProvidedServiceAttributesMissingServiceNameThrowsException() {
+    final Map input = HashMap.of(
+      "syslog_drain_url", "test-syslog-drain-url",
+      "route_service_url", "test-route-service-url",
+      "tags", List.of(
+        "my-tag"
+      ).asJava(),
+      "credentials_map", "{\"foo\": \"bar\"}"
+    ).toJavaMap();
+
+    assertThrows(IllegalArgumentException.class, () -> converter.convertUserProvidedServiceManifest(input), "Manifest is missing the service name");
   }
 
   @Test
   void convertManifestMapToServiceAttributesEmptyParamString() {
     final Map input = HashMap.of(
       "service", "my-service",
+      "service_instance_name", "my-service-instance-name",
       "service_plan", "my-service-plan",
       "tags", List.of(
         "my-tag"
       ).asJava(),
+      "updatable", true,
       "parameters", ""
     ).toJavaMap();
 
     assertThat(converter.convertManifest(input)).isEqualToComparingFieldByFieldRecursively(
       new DeployCloudFoundryServiceDescription.ServiceAttributes()
         .setService("my-service")
+        .setServiceInstanceName("my-service-instance-name")
         .setServicePlan("my-service-plan")
         .setTags(Collections.singleton("my-tag"))
+        .setUpdatable(true)
     );
   }
 
@@ -158,9 +253,11 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
       "credentials", "test",
       "region", "org > space",
       "manifest", HashMap.of(
-        "type", "artifact",
-        "account", "test",
-        "reference", "ref1"
+        "artifact", HashMap.of(
+          "artifactAccount", "test",
+          "reference", "ref1",
+          "type", "test"
+        ).toJavaMap()
       ).toJavaMap()
     ).toJavaMap();
 
@@ -172,12 +269,74 @@ class DeployCloudFoundryServiceAtomicOperationConverterTest {
     assertThat(result.getServiceAttributes()).isEqualToComparingFieldByFieldRecursively(
       new DeployCloudFoundryServiceDescription.ServiceAttributes()
         .setService("my-service")
-        .setServiceName("my-service-name")
+        .setServiceInstanceName("my-service-instance-name")
         .setServicePlan("my-service-plan")
         .setTags(Collections.singleton("tag1"))
+        .setUpdatable(false)
         .setParameterMap(HashMap.<String, Object>of(
-        "foo", "bar"
-      ).toJavaMap())
+          "foo", "bar"
+        ).toJavaMap())
+    );
+  }
+
+  @Test
+  void convertDescriptionWithUserProvidedInput() {
+    final Map input = HashMap.of(
+      "credentials", "test",
+      "region", "org > space",
+      "userProvided", true,
+      "manifest", HashMap.of(
+        "direct", HashMap.of(
+          "serviceInstanceName", "userProvidedServiceName",
+          "tags", List.of("my-tag").asJava(),
+          "syslogDrainUrl", "http://syslogDrainUrl.io",
+          "credentials", "{\"foo\": \"bar\"}",
+          "routeServiceUrl", "http://routeServiceUrl.io"
+        ).toJavaMap()
+      ).toJavaMap()
+    ).toJavaMap();
+
+    final DeployCloudFoundryServiceDescription result = converter.convertDescription(input);
+    assertThat(result.getServiceAttributes()).isNull();
+    assertThat(result.getUserProvidedServiceAttributes()).isEqualToComparingFieldByFieldRecursively(
+      new DeployCloudFoundryServiceDescription.UserProvidedServiceAttributes()
+        .setServiceInstanceName("userProvidedServiceName")
+        .setSyslogDrainUrl("http://syslogDrainUrl.io")
+        .setRouteServiceUrl("http://routeServiceUrl.io")
+        .setTags(Collections.singleton("my-tag"))
+        .setUpdatable(true)
+        .setCredentials(HashMap.<String, Object>of(
+          "foo", "bar"
+        ).toJavaMap())
+    );
+  }
+
+  @Test
+  void convertDescriptionWithUserProvidedInputWithoutCredentials() {
+    final Map input = HashMap.of(
+      "credentials", "test",
+      "region", "org > space",
+      "userProvided", true,
+      "manifest", HashMap.of(
+        "direct", HashMap.of(
+          "serviceInstanceName", "userProvidedServiceName",
+          "tags", List.of("my-tag").asJava(),
+          "updatable", false,
+          "syslogDrainUrl", "http://syslogDrainUrl.io",
+          "routeServiceUrl", "http://routeServiceUrl.io"
+        ).toJavaMap()
+      ).toJavaMap()
+    ).toJavaMap();
+
+    final DeployCloudFoundryServiceDescription result = converter.convertDescription(input);
+    assertThat(result.getServiceAttributes()).isNull();
+    assertThat(result.getUserProvidedServiceAttributes()).isEqualToComparingFieldByFieldRecursively(
+      new DeployCloudFoundryServiceDescription.UserProvidedServiceAttributes()
+        .setServiceInstanceName("userProvidedServiceName")
+        .setSyslogDrainUrl("http://syslogDrainUrl.io")
+        .setRouteServiceUrl("http://routeServiceUrl.io")
+        .setTags(Collections.singleton("my-tag"))
+        .setUpdatable(false)
     );
   }
 }
